--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Landing Page Project</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo"> Header Logo</div>
+        <ul class="header-links">
+            <li>Header Link One</li>
+            <li>Header Link Two</li>
+            <li>Header Link Three</li>
+        </ul>
+    </div>
 </body>
 </html>
