Add hero content to webpage

--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
             <li>Header Link Three</li>
         </ul>
     </div>
+
+    <div class="hero">
+        <div class ="hero-content">
+            <div class="hero-main-text">This website is awesome</div>
+            <div class="hero-secondary-text">This website has some subtext that goes here undere the main title. It's a smaller font and the color is lower contrast.</div>
+            <button class="signup">Sign up</button>
+        </div>
+        <img class="hero-image" src="hero-cat.jpg" alt="A cat laying down with their eyes closed. It rests it's head on one of their paws. ">
+
+    </div>
 </body>
 </html>
