Add info section with title

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
         <img class="hero-image" src="hero-cat.jpg" alt="A cat laying down with their eyes closed. It rests it's head on one of their paws. ">
 
     </div>
+
+    <div class="info">
+        <div class="info-title">Some random information.</div>
+    </div>
 </body>
 </html>
