Add content for info section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 
     <div class="info">
         <div class="info-title">Some random information.</div>
+        <div class="info-content">
+            <div class="info-image">
+                <img>
+                <div class="caption">this is some subtext under an illustriation or image</div>
+            </div>
+            <div class="info-image">
+                <img>
+                <div class="caption">this is some subtext under an illustriation or image</div>
+            </div>
+            <div class="info-image">
+                <img>
+                <div class="caption">this is some subtext under an illustriation or image</div>
+            </div>
+            <div class="info-image">
+                <img>
+                <div class="caption">this is some subtext under an illustriation or image</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
