Add image to info section

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="info-title">Some random information.</div>
         <div class="info-content">
             <div class="info-image">
-                <img>
+                <img src="info-img1.jpg" alt="White and Grey Short Fur Cat Beside Grey Rock during Daytime">
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
             <div class="info-image">
-                <img>
+                <img> 
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
             <div class="info-image">
