Add three other images to info section
Attribution added to README.md

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
             <div class="info-image">
-                <img> 
+                <img src="info-img2.jpg" alt="White and Brown Tabby Cat"> 
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
             <div class="info-image">
-                <img>
+                <img src="info-img3.jpg" alt="Brown Tabby Cat in Close Up Photography">
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
             <div class="info-image">
-                <img>
+                <img src="info-img4.jpg" alt="Cat Lying Down">
                 <div class="caption">this is some subtext under an illustriation or image</div>
             </div>
         </div>
