--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
         <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="quote-attribution">-Thor, God of Thunder</div>
     </div>
+
+    <div class="signup">
+        <div class="sign-content">
+            <div class="signup-title">Call to action! It's time!</div>
+            <div class="singup-subtext">Sign up for our product by clicking that button over there!</div>
+        </div>
+        <button class="signup-button">Sign up</button>
+    </div>
 </body>
 </html>
