--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class ="hero-content">
             <div class="hero-main-text">This website is awesome</div>
             <div class="hero-secondary-text">This website has some subtext that goes here undere the main title. It's a smaller font and the color is lower contrast.</div>
-            <button class="signup">Sign up</button>
+            <button class="signup-button">Sign up</button>
         </div>
         <img class="hero-image" src="hero-cat.jpg" alt="A cat laying down with their eyes closed. It rests it's head on one of their paws. ">
 
