--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="signup">
         <div class="sign-content">
             <div class="signup-title">Call to action! It's time!</div>
-            <div class="singup-subtext">Sign up for our product by clicking that button over there!</div>
+            <div class="signup-subtext">Sign up for our product by clicking that button over there!</div>
         </div>
         <button class="signup-button">Sign up</button>
     </div>
