--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
         </div>
         <button class="signup-button">Sign up</button>
     </div>
+
+    <div class="footer">Copyright &copy The Odin Project 2025</div>
 </body>
 </html>
