--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="header">
         <div class="logo"> Header Logo</div>
         <ul class="header-links">
-            <li>Header Link One</li>
-            <li>Header Link Two</li>
-            <li>Header Link Three</li>
+            <li><a href="#">Header Link One</a></li>
+            <li><a href="#">Header Link Two</a></li>
+            <li><a href="#">Header Link Three</a></li>
         </ul>
     </div>
 
